For full details, see the git log at: https://github.com/ksh93/ksh

Any uppercase BUG_* names are modernish shell bug IDs.

2021-11-15:

- In arithmetic evaluation, the --posix compliance option now disables the
  special floating point constants Inf and NaN so that $((inf)) and $((nan))
  refer to the variables by those names as the standard requires. (BUG_ARITHNAN)

2021-11-14:

- Fixed: ksh crashed after unsetting .sh.match and then matching a pattern.

- Another test/[ fix: "test \( string1 -a string2 \)" and "test \( string1 -o
  string2 \)" no longer give an incorrect "argument expected" error message.

2021-11-13:

- The test/[ built-in command now supports the '<' and '=~' operators from [[.
  As of now, test/[ supports the same operators as [[ except for the different
  and/or operators. Note: test/[ remains deprecated due to its many pitfalls.

- The test/[ built-in command is fixed so that the binary -a (and) and -o (or)
  operators, as in [ "$a" -a "$b" ] or [ "$a" -o "$b" ], work even if "$a" is
  '!' or '('. To avoid breaking backwards compatibility with the nonstandard
  unary [ -a "$file" ] and [ -o "$option" ] operators in combination with '!'
  or parentheses, this fix is only activated if the posix option is on.

2021-11-07:

- Fixed a bug that could corrupt output if standard output is closed upon
  initializing the shell.

- Improved BUG_PUTIOERR fix (2020-05-14) with more error checking. On
  systems with the "disk full" error testing device /dev/full, an
  echo/print/printf to /dev/full now always yields a non-zero exit status.

2021-09-13:

- Fixed a bug introduced in 93u+ 2012-02-07 that caused the 'printf' builtin
  (and its 'print -f' equivalent) to fail to recognise integer arguments with a
  leading zero as octal numbers. For example, 'printf "%d\n" 010' now once
  again outputs '8' instead of '10'.

- Disable the POSIX arithmetic context while running a command substitution